fixed spacing between cards

--- a/src/components/homepage/homePage.css
+++ b/src/components/homepage/homePage.css
@@ -65,7 +65,9 @@
 
 .cards-row {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 35px;
+
 }
 
 .card {
